# ai-lab

./: .gitignore  CHAPTERS.md  CONCEPTS.md  COURSES.md  CURRICULUM.md  FOCUS.md  GLOSSARY.md  PROGRESS.md  README.md  ROADMAP.md  ROUTE.md  linear-regression-course.md  logistic-regression-course.md  pyproject.toml  resources.md
curriculum/: README.md
curriculum/syllabi/: 3blue1brown-calculus.md  3blue1brown-la.md  coursera-ml.md  dl-ai-math.md  karpathy-llm-deep-dive.md  karpathy-zero-to-hero.md  mit-6042.md  nvidia-cuda.md  stanford-cs229-llm.md  transformers-in-practice.md  udacity-agentic-ai.md  udacity-linear-algebra.md
dslr/: Makefile  describe.py  histogram.py  logreg_predict.py  logreg_train.py  pair_plot.py  scatter_plot.py  utils.py
exercises/: EXERCISES.md  README.md  SUBMISSION.md
exercises/cuda/: README.md
ft_linear_regression/: .gitignore  Makefile  linear-regression-course.md  plot.py  predict.py  train.py
papers/: 1706.03762-attention-is-all-you-need.md  2503.10622.md  2606.18089-compositional-generalization.md  READING-QUEUE.md  README.md  paper-template.md
scripts/: generate_curriculum.py  submit.py
tests/: README.md
topics/: README.md  attention.md  backpropagation.md  cnn.md  cuda.md  discrete-math.md  dot-product.md  encoder-decoder.md  gpu-matmul.md  gradient-descent.md  linear-algebra.md  loss-functions.md  matrix-multiplication.md  mlp.md  model-evaluation.md  n-grams.md  policy-gradients.md  probability.md  rl-post-training.md  rnn.md  sft.md  supervised-learning.md  tensors-autograd.md  tokenization.md  transformer.md
(+294 files in other folders)
